--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
